parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BEGIN
    BREAK
    CASE
    CLASS
    COINCIDENCE
    COMPOSITION
    DO
    DOUBLE_QUOTE
    ENSURE
    FALSE
    L_SQUARE_BRACKET
    NEGATION
    NIL
    NOT
    OR
    QUOTATION_MARK
    RESCUE
    RETRY
    RETURN
    R_SQUARE_BRACKET
    THEN
    TRUE
    UNLESS
    UNTIL
    WHEN
    WRENCH_L
    WRENCH_R

Grammar

Rule 0     S' -> sentencia
Rule 1     sentencia -> funcion
Rule 2     sentencia -> declaracion
Rule 3     sentencia -> expresion
Rule 4     sentencia -> estructura
Rule 5     sentencia -> print
Rule 6     funcion -> DEF VARIABLE_LOCAL L_PAREN parametros R_PAREN cuerpo END
Rule 7     parametros -> VARIABLE_LOCAL
Rule 8     parametros -> VARIABLE_LOCAL COMMA parametros
Rule 9     cuerpo -> declaracion
Rule 10    cuerpo -> declaracion cuerpo
Rule 11    cuerpo -> print
Rule 12    cuerpo -> print cuerpo
Rule 13    cuerpo -> expresion
Rule 14    cuerpo -> expresion cuerpo
Rule 15    declaracion -> variable EQUAL expresion
Rule 16    declaracion -> variable EQUAL GETS
Rule 17    variable -> VARIABLE_LOCAL
Rule 18    variable -> VARIABLE_INSTANCE
Rule 19    variable -> VARIABLE_CLASS
Rule 20    variable -> VARIABLE_GLOBAL
Rule 21    variable -> CONSTANT
Rule 22    expresion -> expresion PLUS term
Rule 23    expresion -> expresion MINUS term
Rule 24    expresion -> expresion MULTIPLICATION term
Rule 25    expresion -> expresion DIVIDE term
Rule 26    expresion -> expresion EXPONENT term
Rule 27    expresion -> expresion MODULE term
Rule 28    expresion -> expresion AND_LOGIC term
Rule 29    expresion -> expresion OR_LOGIC term
Rule 30    expresion -> expresion EQUALITY term
Rule 31    expresion -> expresion EQUALITY_OF_CASE term
Rule 32    expresion -> expresion GREATER_EQUAL term
Rule 33    expresion -> expresion GREATER_THAN term
Rule 34    expresion -> expresion SMALLER_THAN term
Rule 35    expresion -> expresion SMALLER_EQUAL term
Rule 36    expresion -> term
Rule 37    term -> NUMBER
Rule 38    term -> FLOAT
Rule 39    term -> variable
Rule 40    term -> L_PAREN expresion R_PAREN
Rule 41    print -> PUTS L_PAREN expresion R_PAREN
Rule 42    print -> PUTS L_PAREN variable R_PAREN
Rule 43    print -> PUTS L_PAREN R_PAREN
Rule 44    print -> PUTS STRING
Rule 45    estructura -> estructuraCondicional
Rule 46    estructura -> estructuraIterativa
Rule 47    estructuraCondicional -> estructuraif END
Rule 48    estructuraCondicional -> estructuraif estructuraelse END
Rule 49    estructuraCondicional -> estructuraif estructuraelseif END
Rule 50    estructuraif -> IF expresion cuerpo
Rule 51    estructuraelseif -> ELSIF expresion cuerpo
Rule 52    estructuraelse -> ELSE cuerpo
Rule 53    estructuraIterativa -> sentenciafor END
Rule 54    estructuraIterativa -> sentenciawhile END
Rule 55    sentenciafor -> FOR variable IN L_PAREN NUMBER DOUBLE_POINT NUMBER R_PAREN cuerpo
Rule 56    sentenciawhile -> WHILE expresion cuerpo

Terminals, with rules where they appear

AND                  : 
AND_LOGIC            : 28
BEGIN                : 
BREAK                : 
CASE                 : 
CLASS                : 
COINCIDENCE          : 
COMMA                : 8
COMPOSITION          : 
CONSTANT             : 21
DEF                  : 6
DIVIDE               : 25
DO                   : 
DOUBLE_POINT         : 55
DOUBLE_QUOTE         : 
ELSE                 : 52
ELSIF                : 51
END                  : 6 47 48 49 53 54
ENSURE               : 
EQUAL                : 15 16
EQUALITY             : 30
EQUALITY_OF_CASE     : 31
EXPONENT             : 26
FALSE                : 
FLOAT                : 38
FOR                  : 55
GETS                 : 16
GREATER_EQUAL        : 32
GREATER_THAN         : 33
IF                   : 50
IN                   : 55
L_PAREN              : 6 40 41 42 43 55
L_SQUARE_BRACKET     : 
MINUS                : 23
MODULE               : 27
MULTIPLICATION       : 24
NEGATION             : 
NIL                  : 
NOT                  : 
NUMBER               : 37 55 55
OR                   : 
OR_LOGIC             : 29
PLUS                 : 22
PUTS                 : 41 42 43 44
QUOTATION_MARK       : 
RESCUE               : 
RETRY                : 
RETURN               : 
R_PAREN              : 6 40 41 42 43 55
R_SQUARE_BRACKET     : 
SMALLER_EQUAL        : 35
SMALLER_THAN         : 34
STRING               : 44
THEN                 : 
TRUE                 : 
UNLESS               : 
UNTIL                : 
VARIABLE_CLASS       : 19
VARIABLE_GLOBAL      : 20
VARIABLE_INSTANCE    : 18
VARIABLE_LOCAL       : 6 7 8 17
WHEN                 : 
WHILE                : 56
WRENCH_L             : 
WRENCH_R             : 
error                : 

Nonterminals, with rules where they appear

cuerpo               : 6 10 12 14 50 51 52 55 56
declaracion          : 2 9 10
estructura           : 4
estructuraCondicional : 45
estructuraIterativa  : 46
estructuraelse       : 48
estructuraelseif     : 49
estructuraif         : 47 48 49
expresion            : 3 13 14 15 22 23 24 25 26 27 28 29 30 31 32 33 34 35 40 41 50 51 56
funcion              : 1
parametros           : 6 8
print                : 5 11 12
sentencia            : 0
sentenciafor         : 53
sentenciawhile       : 54
term                 : 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
variable             : 15 16 39 42 55

Parsing method: LALR

state 0

    (0) S' -> . sentencia
    (1) sentencia -> . funcion
    (2) sentencia -> . declaracion
    (3) sentencia -> . expresion
    (4) sentencia -> . estructura
    (5) sentencia -> . print
    (6) funcion -> . DEF VARIABLE_LOCAL L_PAREN parametros R_PAREN cuerpo END
    (15) declaracion -> . variable EQUAL expresion
    (16) declaracion -> . variable EQUAL GETS
    (22) expresion -> . expresion PLUS term
    (23) expresion -> . expresion MINUS term
    (24) expresion -> . expresion MULTIPLICATION term
    (25) expresion -> . expresion DIVIDE term
    (26) expresion -> . expresion EXPONENT term
    (27) expresion -> . expresion MODULE term
    (28) expresion -> . expresion AND_LOGIC term
    (29) expresion -> . expresion OR_LOGIC term
    (30) expresion -> . expresion EQUALITY term
    (31) expresion -> . expresion EQUALITY_OF_CASE term
    (32) expresion -> . expresion GREATER_EQUAL term
    (33) expresion -> . expresion GREATER_THAN term
    (34) expresion -> . expresion SMALLER_THAN term
    (35) expresion -> . expresion SMALLER_EQUAL term
    (36) expresion -> . term
    (45) estructura -> . estructuraCondicional
    (46) estructura -> . estructuraIterativa
    (41) print -> . PUTS L_PAREN expresion R_PAREN
    (42) print -> . PUTS L_PAREN variable R_PAREN
    (43) print -> . PUTS L_PAREN R_PAREN
    (44) print -> . PUTS STRING
    (17) variable -> . VARIABLE_LOCAL
    (18) variable -> . VARIABLE_INSTANCE
    (19) variable -> . VARIABLE_CLASS
    (20) variable -> . VARIABLE_GLOBAL
    (21) variable -> . CONSTANT
    (37) term -> . NUMBER
    (38) term -> . FLOAT
    (39) term -> . variable
    (40) term -> . L_PAREN expresion R_PAREN
    (47) estructuraCondicional -> . estructuraif END
    (48) estructuraCondicional -> . estructuraif estructuraelse END
    (49) estructuraCondicional -> . estructuraif estructuraelseif END
    (53) estructuraIterativa -> . sentenciafor END
    (54) estructuraIterativa -> . sentenciawhile END
    (50) estructuraif -> . IF expresion cuerpo
    (55) sentenciafor -> . FOR variable IN L_PAREN NUMBER DOUBLE_POINT NUMBER R_PAREN cuerpo
    (56) sentenciawhile -> . WHILE expresion cuerpo

    DEF             shift and go to state 7
    PUTS            shift and go to state 14
    VARIABLE_LOCAL  shift and go to state 8
    VARIABLE_INSTANCE shift and go to state 15
    VARIABLE_CLASS  shift and go to state 16
    VARIABLE_GLOBAL shift and go to state 17
    CONSTANT        shift and go to state 18
    NUMBER          shift and go to state 19
    FLOAT           shift and go to state 20
    L_PAREN         shift and go to state 9
    IF              shift and go to state 24
    FOR             shift and go to state 25
    WHILE           shift and go to state 26

    sentencia                      shift and go to state 1
    funcion                        shift and go to state 2
    declaracion                    shift and go to state 3
    expresion                      shift and go to state 4
    estructura                     shift and go to state 5
    print                          shift and go to state 6
    variable                       shift and go to state 10
    term                           shift and go to state 11
    estructuraCondicional          shift and go to state 12
    estructuraIterativa            shift and go to state 13
    estructuraif                   shift and go to state 21
    sentenciafor                   shift and go to state 22
    sentenciawhile                 shift and go to state 23

state 1

    (0) S' -> sentencia .



state 2

    (1) sentencia -> funcion .

    $end            reduce using rule 1 (sentencia -> funcion .)


state 3

    (2) sentencia -> declaracion .

    $end            reduce using rule 2 (sentencia -> declaracion .)


state 4

    (3) sentencia -> expresion .
    (22) expresion -> expresion . PLUS term
    (23) expresion -> expresion . MINUS term
    (24) expresion -> expresion . MULTIPLICATION term
    (25) expresion -> expresion . DIVIDE term
    (26) expresion -> expresion . EXPONENT term
    (27) expresion -> expresion . MODULE term
    (28) expresion -> expresion . AND_LOGIC term
    (29) expresion -> expresion . OR_LOGIC term
    (30) expresion -> expresion . EQUALITY term
    (31) expresion -> expresion . EQUALITY_OF_CASE term
    (32) expresion -> expresion . GREATER_EQUAL term
    (33) expresion -> expresion . GREATER_THAN term
    (34) expresion -> expresion . SMALLER_THAN term
    (35) expresion -> expresion . SMALLER_EQUAL term

    $end            reduce using rule 3 (sentencia -> expresion .)
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    MULTIPLICATION  shift and go to state 29
    DIVIDE          shift and go to state 30
    EXPONENT        shift and go to state 31
    MODULE          shift and go to state 32
    AND_LOGIC       shift and go to state 33
    OR_LOGIC        shift and go to state 34
    EQUALITY        shift and go to state 35
    EQUALITY_OF_CASE shift and go to state 36
    GREATER_EQUAL   shift and go to state 37
    GREATER_THAN    shift and go to state 38
    SMALLER_THAN    shift and go to state 39
    SMALLER_EQUAL   shift and go to state 40


state 5

    (4) sentencia -> estructura .

    $end            reduce using rule 4 (sentencia -> estructura .)


state 6

    (5) sentencia -> print .

    $end            reduce using rule 5 (sentencia -> print .)


state 7

    (6) funcion -> DEF . VARIABLE_LOCAL L_PAREN parametros R_PAREN cuerpo END

    VARIABLE_LOCAL  shift and go to state 41


state 8

    (17) variable -> VARIABLE_LOCAL .

    EQUAL           reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    PLUS            reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    MINUS           reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    MULTIPLICATION  reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    DIVIDE          reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    EXPONENT        reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    MODULE          reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    AND_LOGIC       reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    OR_LOGIC        reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    EQUALITY        reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    EQUALITY_OF_CASE reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    GREATER_EQUAL   reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    GREATER_THAN    reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    SMALLER_THAN    reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    SMALLER_EQUAL   reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    $end            reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    R_PAREN         reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    PUTS            reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    VARIABLE_LOCAL  reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    VARIABLE_INSTANCE reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    VARIABLE_CLASS  reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    VARIABLE_GLOBAL reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    CONSTANT        reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    NUMBER          reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    FLOAT           reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    L_PAREN         reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    IN              reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    END             reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    ELSE            reduce using rule 17 (variable -> VARIABLE_LOCAL .)
    ELSIF           reduce using rule 17 (variable -> VARIABLE_LOCAL .)


state 9

    (40) term -> L_PAREN . expresion R_PAREN
    (22) expresion -> . expresion PLUS term
    (23) expresion -> . expresion MINUS term
    (24) expresion -> . expresion MULTIPLICATION term
    (25) expresion -> . expresion DIVIDE term
    (26) expresion -> . expresion EXPONENT term
    (27) expresion -> . expresion MODULE term
    (28) expresion -> . expresion AND_LOGIC term
    (29) expresion -> . expresion OR_LOGIC term
    (30) expresion -> . expresion EQUALITY term
    (31) expresion -> . expresion EQUALITY_OF_CASE term
    (32) expresion -> . expresion GREATER_EQUAL term
    (33) expresion -> . expresion GREATER_THAN term
    (34) expresion -> . expresion SMALLER_THAN term
    (35) expresion -> . expresion SMALLER_EQUAL term
    (36) expresion -> . term
    (37) term -> . NUMBER
    (38) term -> . FLOAT
    (39) term -> . variable
    (40) term -> . L_PAREN expresion R_PAREN
    (17) variable -> . VARIABLE_LOCAL
    (18) variable -> . VARIABLE_INSTANCE
    (19) variable -> . VARIABLE_CLASS
    (20) variable -> . VARIABLE_GLOBAL
    (21) variable -> . CONSTANT

    NUMBER          shift and go to state 19
    FLOAT           shift and go to state 20
    L_PAREN         shift and go to state 9
    VARIABLE_LOCAL  shift and go to state 8
    VARIABLE_INSTANCE shift and go to state 15
    VARIABLE_CLASS  shift and go to state 16
    VARIABLE_GLOBAL shift and go to state 17
    CONSTANT        shift and go to state 18

    expresion                      shift and go to state 42
    term                           shift and go to state 11
    variable                       shift and go to state 43

state 10

    (15) declaracion -> variable . EQUAL expresion
    (16) declaracion -> variable . EQUAL GETS
    (39) term -> variable .

    EQUAL           shift and go to state 44
    PLUS            reduce using rule 39 (term -> variable .)
    MINUS           reduce using rule 39 (term -> variable .)
    MULTIPLICATION  reduce using rule 39 (term -> variable .)
    DIVIDE          reduce using rule 39 (term -> variable .)
    EXPONENT        reduce using rule 39 (term -> variable .)
    MODULE          reduce using rule 39 (term -> variable .)
    AND_LOGIC       reduce using rule 39 (term -> variable .)
    OR_LOGIC        reduce using rule 39 (term -> variable .)
    EQUALITY        reduce using rule 39 (term -> variable .)
    EQUALITY_OF_CASE reduce using rule 39 (term -> variable .)
    GREATER_EQUAL   reduce using rule 39 (term -> variable .)
    GREATER_THAN    reduce using rule 39 (term -> variable .)
    SMALLER_THAN    reduce using rule 39 (term -> variable .)
    SMALLER_EQUAL   reduce using rule 39 (term -> variable .)
    $end            reduce using rule 39 (term -> variable .)
    PUTS            reduce using rule 39 (term -> variable .)
    VARIABLE_LOCAL  reduce using rule 39 (term -> variable .)
    VARIABLE_INSTANCE reduce using rule 39 (term -> variable .)
    VARIABLE_CLASS  reduce using rule 39 (term -> variable .)
    VARIABLE_GLOBAL reduce using rule 39 (term -> variable .)
    CONSTANT        reduce using rule 39 (term -> variable .)
    NUMBER          reduce using rule 39 (term -> variable .)
    FLOAT           reduce using rule 39 (term -> variable .)
    L_PAREN         reduce using rule 39 (term -> variable .)
    END             reduce using rule 39 (term -> variable .)
    ELSE            reduce using rule 39 (term -> variable .)
    ELSIF           reduce using rule 39 (term -> variable .)


state 11

    (36) expresion -> term .

    PLUS            reduce using rule 36 (expresion -> term .)
    MINUS           reduce using rule 36 (expresion -> term .)
    MULTIPLICATION  reduce using rule 36 (expresion -> term .)
    DIVIDE          reduce using rule 36 (expresion -> term .)
    EXPONENT        reduce using rule 36 (expresion -> term .)
    MODULE          reduce using rule 36 (expresion -> term .)
    AND_LOGIC       reduce using rule 36 (expresion -> term .)
    OR_LOGIC        reduce using rule 36 (expresion -> term .)
    EQUALITY        reduce using rule 36 (expresion -> term .)
    EQUALITY_OF_CASE reduce using rule 36 (expresion -> term .)
    GREATER_EQUAL   reduce using rule 36 (expresion -> term .)
    GREATER_THAN    reduce using rule 36 (expresion -> term .)
    SMALLER_THAN    reduce using rule 36 (expresion -> term .)
    SMALLER_EQUAL   reduce using rule 36 (expresion -> term .)
    $end            reduce using rule 36 (expresion -> term .)
    R_PAREN         reduce using rule 36 (expresion -> term .)
    PUTS            reduce using rule 36 (expresion -> term .)
    VARIABLE_LOCAL  reduce using rule 36 (expresion -> term .)
    VARIABLE_INSTANCE reduce using rule 36 (expresion -> term .)
    VARIABLE_CLASS  reduce using rule 36 (expresion -> term .)
    VARIABLE_GLOBAL reduce using rule 36 (expresion -> term .)
    CONSTANT        reduce using rule 36 (expresion -> term .)
    NUMBER          reduce using rule 36 (expresion -> term .)
    FLOAT           reduce using rule 36 (expresion -> term .)
    L_PAREN         reduce using rule 36 (expresion -> term .)
    END             reduce using rule 36 (expresion -> term .)
    ELSE            reduce using rule 36 (expresion -> term .)
    ELSIF           reduce using rule 36 (expresion -> term .)


state 12

    (45) estructura -> estructuraCondicional .

    $end            reduce using rule 45 (estructura -> estructuraCondicional .)


state 13

    (46) estructura -> estructuraIterativa .

    $end            reduce using rule 46 (estructura -> estructuraIterativa .)


state 14

    (41) print -> PUTS . L_PAREN expresion R_PAREN
    (42) print -> PUTS . L_PAREN variable R_PAREN
    (43) print -> PUTS . L_PAREN R_PAREN
    (44) print -> PUTS . STRING

    L_PAREN         shift and go to state 45
    STRING          shift and go to state 46


state 15

    (18) variable -> VARIABLE_INSTANCE .

    EQUAL           reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    PLUS            reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    MINUS           reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    MULTIPLICATION  reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    DIVIDE          reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    EXPONENT        reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    MODULE          reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    AND_LOGIC       reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    OR_LOGIC        reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    EQUALITY        reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    EQUALITY_OF_CASE reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    GREATER_EQUAL   reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    GREATER_THAN    reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    SMALLER_THAN    reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    SMALLER_EQUAL   reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    $end            reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    R_PAREN         reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    PUTS            reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    VARIABLE_LOCAL  reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    VARIABLE_INSTANCE reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    VARIABLE_CLASS  reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    VARIABLE_GLOBAL reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    CONSTANT        reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    NUMBER          reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    FLOAT           reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    L_PAREN         reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    IN              reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    END             reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    ELSE            reduce using rule 18 (variable -> VARIABLE_INSTANCE .)
    ELSIF           reduce using rule 18 (variable -> VARIABLE_INSTANCE .)


state 16

    (19) variable -> VARIABLE_CLASS .

    EQUAL           reduce using rule 19 (variable -> VARIABLE_CLASS .)
    PLUS            reduce using rule 19 (variable -> VARIABLE_CLASS .)
    MINUS           reduce using rule 19 (variable -> VARIABLE_CLASS .)
    MULTIPLICATION  reduce using rule 19 (variable -> VARIABLE_CLASS .)
    DIVIDE          reduce using rule 19 (variable -> VARIABLE_CLASS .)
    EXPONENT        reduce using rule 19 (variable -> VARIABLE_CLASS .)
    MODULE          reduce using rule 19 (variable -> VARIABLE_CLASS .)
    AND_LOGIC       reduce using rule 19 (variable -> VARIABLE_CLASS .)
    OR_LOGIC        reduce using rule 19 (variable -> VARIABLE_CLASS .)
    EQUALITY        reduce using rule 19 (variable -> VARIABLE_CLASS .)
    EQUALITY_OF_CASE reduce using rule 19 (variable -> VARIABLE_CLASS .)
    GREATER_EQUAL   reduce using rule 19 (variable -> VARIABLE_CLASS .)
    GREATER_THAN    reduce using rule 19 (variable -> VARIABLE_CLASS .)
    SMALLER_THAN    reduce using rule 19 (variable -> VARIABLE_CLASS .)
    SMALLER_EQUAL   reduce using rule 19 (variable -> VARIABLE_CLASS .)
    $end            reduce using rule 19 (variable -> VARIABLE_CLASS .)
    R_PAREN         reduce using rule 19 (variable -> VARIABLE_CLASS .)
    PUTS            reduce using rule 19 (variable -> VARIABLE_CLASS .)
    VARIABLE_LOCAL  reduce using rule 19 (variable -> VARIABLE_CLASS .)
    VARIABLE_INSTANCE reduce using rule 19 (variable -> VARIABLE_CLASS .)
    VARIABLE_CLASS  reduce using rule 19 (variable -> VARIABLE_CLASS .)
    VARIABLE_GLOBAL reduce using rule 19 (variable -> VARIABLE_CLASS .)
    CONSTANT        reduce using rule 19 (variable -> VARIABLE_CLASS .)
    NUMBER          reduce using rule 19 (variable -> VARIABLE_CLASS .)
    FLOAT           reduce using rule 19 (variable -> VARIABLE_CLASS .)
    L_PAREN         reduce using rule 19 (variable -> VARIABLE_CLASS .)
    IN              reduce using rule 19 (variable -> VARIABLE_CLASS .)
    END             reduce using rule 19 (variable -> VARIABLE_CLASS .)
    ELSE            reduce using rule 19 (variable -> VARIABLE_CLASS .)
    ELSIF           reduce using rule 19 (variable -> VARIABLE_CLASS .)


state 17

    (20) variable -> VARIABLE_GLOBAL .

    EQUAL           reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    PLUS            reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    MINUS           reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    MULTIPLICATION  reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    DIVIDE          reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    EXPONENT        reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    MODULE          reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    AND_LOGIC       reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    OR_LOGIC        reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    EQUALITY        reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    EQUALITY_OF_CASE reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    GREATER_EQUAL   reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    GREATER_THAN    reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    SMALLER_THAN    reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    SMALLER_EQUAL   reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    $end            reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    R_PAREN         reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    PUTS            reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    VARIABLE_LOCAL  reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    VARIABLE_INSTANCE reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    VARIABLE_CLASS  reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    VARIABLE_GLOBAL reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    CONSTANT        reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    NUMBER          reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    FLOAT           reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    L_PAREN         reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    IN              reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    END             reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    ELSE            reduce using rule 20 (variable -> VARIABLE_GLOBAL .)
    ELSIF           reduce using rule 20 (variable -> VARIABLE_GLOBAL .)


state 18

    (21) variable -> CONSTANT .

    EQUAL           reduce using rule 21 (variable -> CONSTANT .)
    PLUS            reduce using rule 21 (variable -> CONSTANT .)
    MINUS           reduce using rule 21 (variable -> CONSTANT .)
    MULTIPLICATION  reduce using rule 21 (variable -> CONSTANT .)
    DIVIDE          reduce using rule 21 (variable -> CONSTANT .)
    EXPONENT        reduce using rule 21 (variable -> CONSTANT .)
    MODULE          reduce using rule 21 (variable -> CONSTANT .)
    AND_LOGIC       reduce using rule 21 (variable -> CONSTANT .)
    OR_LOGIC        reduce using rule 21 (variable -> CONSTANT .)
    EQUALITY        reduce using rule 21 (variable -> CONSTANT .)
    EQUALITY_OF_CASE reduce using rule 21 (variable -> CONSTANT .)
    GREATER_EQUAL   reduce using rule 21 (variable -> CONSTANT .)
    GREATER_THAN    reduce using rule 21 (variable -> CONSTANT .)
    SMALLER_THAN    reduce using rule 21 (variable -> CONSTANT .)
    SMALLER_EQUAL   reduce using rule 21 (variable -> CONSTANT .)
    $end            reduce using rule 21 (variable -> CONSTANT .)
    R_PAREN         reduce using rule 21 (variable -> CONSTANT .)
    PUTS            reduce using rule 21 (variable -> CONSTANT .)
    VARIABLE_LOCAL  reduce using rule 21 (variable -> CONSTANT .)
    VARIABLE_INSTANCE reduce using rule 21 (variable -> CONSTANT .)
    VARIABLE_CLASS  reduce using rule 21 (variable -> CONSTANT .)
    VARIABLE_GLOBAL reduce using rule 21 (variable -> CONSTANT .)
    CONSTANT        reduce using rule 21 (variable -> CONSTANT .)
    NUMBER          reduce using rule 21 (variable -> CONSTANT .)
    FLOAT           reduce using rule 21 (variable -> CONSTANT .)
    L_PAREN         reduce using rule 21 (variable -> CONSTANT .)
    IN              reduce using rule 21 (variable -> CONSTANT .)
    END             reduce using rule 21 (variable -> CONSTANT .)
    ELSE            reduce using rule 21 (variable -> CONSTANT .)
    ELSIF           reduce using rule 21 (variable -> CONSTANT .)


state 19

    (37) term -> NUMBER .

    PLUS            reduce using rule 37 (term -> NUMBER .)
    MINUS           reduce using rule 37 (term -> NUMBER .)
    MULTIPLICATION  reduce using rule 37 (term -> NUMBER .)
    DIVIDE          reduce using rule 37 (term -> NUMBER .)
    EXPONENT        reduce using rule 37 (term -> NUMBER .)
    MODULE          reduce using rule 37 (term -> NUMBER .)
    AND_LOGIC       reduce using rule 37 (term -> NUMBER .)
    OR_LOGIC        reduce using rule 37 (term -> NUMBER .)
    EQUALITY        reduce using rule 37 (term -> NUMBER .)
    EQUALITY_OF_CASE reduce using rule 37 (term -> NUMBER .)
    GREATER_EQUAL   reduce using rule 37 (term -> NUMBER .)
    GREATER_THAN    reduce using rule 37 (term -> NUMBER .)
    SMALLER_THAN    reduce using rule 37 (term -> NUMBER .)
    SMALLER_EQUAL   reduce using rule 37 (term -> NUMBER .)
    $end            reduce using rule 37 (term -> NUMBER .)
    R_PAREN         reduce using rule 37 (term -> NUMBER .)
    PUTS            reduce using rule 37 (term -> NUMBER .)
    VARIABLE_LOCAL  reduce using rule 37 (term -> NUMBER .)
    VARIABLE_INSTANCE reduce using rule 37 (term -> NUMBER .)
    VARIABLE_CLASS  reduce using rule 37 (term -> NUMBER .)
    VARIABLE_GLOBAL reduce using rule 37 (term -> NUMBER .)
    CONSTANT        reduce using rule 37 (term -> NUMBER .)
    NUMBER          reduce using rule 37 (term -> NUMBER .)
    FLOAT           reduce using rule 37 (term -> NUMBER .)
    L_PAREN         reduce using rule 37 (term -> NUMBER .)
    END             reduce using rule 37 (term -> NUMBER .)
    ELSE            reduce using rule 37 (term -> NUMBER .)
    ELSIF           reduce using rule 37 (term -> NUMBER .)


state 20

    (38) term -> FLOAT .
